src/security/resources/ec2/security-groups.json
{
  "SecurityGroup": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Security group for SSH and HTTP access",
      "SecurityGroupIngress": [
        {
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        },
        {
          "Fn::If": [
            "AllowSSHAccess",
            {
              "IpProtocol": "tcp",
              "FromPort": "22",
              "ToPort": "22",
              "CidrIp": {
                "Ref": "ParamAllowSSHFromRange"
              }
            },
            {
              "Ref": "AWS::NoValue"
            }
          ]
        }
      ]
    }
  }
}
